browser/extensions/onboarding/content/onboarding.css
#
onboarding
-
overlay
*
{
box
-
sizing
:
border
-
box
;
}
#
onboarding
-
overlay
{
position
:
fixed
;
top
:
0
;
left
:
0
;
right
:
0
;
bottom
:
0
;
z
-
index
:
20999
;
color
:
#
4d4d4d
;
background
:
rgb
(
54
57
89
0
.
8
)
;
display
:
none
;
}
#
onboarding
-
overlay
.
onboarding
-
opened
{
display
:
block
;
}
#
onboarding
-
overlay
-
button
{
padding
:
0
;
position
:
absolute
;
cursor
:
pointer
;
top
:
34px
;
offset
-
inline
-
start
:
34px
;
border
:
none
;
background
:
none
;
z
-
index
:
10
;
}
#
onboarding
-
overlay
-
button
:
-
moz
-
focusring
{
outline
:
solid
2px
rgba
(
0
0
0
0
.
1
)
;
-
moz
-
outline
-
radius
:
5px
;
outline
-
offset
:
5px
;
transition
:
outline
-
offset
150ms
;
}
#
onboarding
-
overlay
-
button
-
icon
{
width
:
32px
;
vertical
-
align
:
top
;
}
#
onboarding
-
overlay
-
button
:
:
after
{
background
:
#
0060df
;
font
-
size
:
13px
;
text
-
align
:
center
;
color
:
#
fff
;
box
-
sizing
:
content
-
box
;
font
-
weight
:
400
;
content
:
attr
(
aria
-
label
)
;
display
:
inline
-
block
;
border
:
1px
solid
transparent
;
border
-
radius
:
2px
;
padding
:
10px
16px
;
min
-
width
:
100px
;
max
-
width
:
140px
;
white
-
space
:
pre
-
line
;
margin
-
inline
-
start
:
4px
;
margin
-
top
:
-
10px
;
box
-
shadow
:
-
2px
0
5px
0
rgba
(
74
74
79
0
.
25
)
;
}
#
onboarding
-
overlay
-
dialog
.
onboarding
-
hidden
#
onboarding
-
tour
-
sync
-
page
[
data
-
login
-
state
=
logged
-
in
]
.
show
-
on
-
logged
-
out
#
onboarding
-
tour
-
sync
-
page
[
data
-
login
-
state
=
logged
-
out
]
.
show
-
on
-
logged
-
in
{
display
:
none
;
}
.
onboarding
-
close
-
btn
{
position
:
absolute
;
top
:
15px
;
offset
-
inline
-
end
:
15px
;
cursor
:
pointer
;
width
:
16px
;
height
:
16px
;
border
:
none
;
background
:
none
;
padding
:
0
;
}
.
onboarding
-
close
-
btn
:
:
before
{
content
:
url
(
"
chrome
:
/
/
global
/
skin
/
icons
/
close
.
svg
"
)
;
-
moz
-
context
-
properties
:
fill
fill
-
opacity
;
fill
-
opacity
:
0
;
}
.
onboarding
-
close
-
btn
:
-
moz
-
any
(
:
hover
:
active
:
focus
:
-
moz
-
focusring
)
:
:
before
{
fill
-
opacity
:
0
.
1
;
}
#
onboarding
-
overlay
.
onboarding
-
opened
>
#
onboarding
-
overlay
-
dialog
{
width
:
960px
;
height
:
510px
;
background
:
#
f5f5f7
;
border
:
1px
solid
rgba
(
9
6
13
0
.
1
)
;
border
-
radius
:
3px
;
position
:
relative
;
margin
:
0
calc
(
50
%
-
480px
)
;
top
:
calc
(
50
%
-
255px
)
;
display
:
grid
;
grid
-
template
-
rows
:
[
dialog
-
start
]
70px
[
page
-
start
]
1fr
[
footer
-
start
]
30px
[
dialog
-
end
]
;
grid
-
template
-
columns
:
[
dialog
-
start
]
230px
[
page
-
start
]
1fr
[
dialog
-
end
]
;
}
media
(
max
-
height
:
510px
)
{
#
onboarding
-
overlay
.
onboarding
-
opened
>
#
onboarding
-
overlay
-
dialog
{
top
:
0
;
}
}
#
onboarding
-
overlay
-
dialog
>
header
{
grid
-
row
:
dialog
-
start
/
page
-
start
;
grid
-
column
:
dialog
-
start
/
tour
-
end
;
margin
-
top
:
22px
;
margin
-
bottom
:
0
;
margin
-
inline
-
end
:
0
;
margin
-
inline
-
start
:
36px
;
font
-
size
:
22px
;
font
-
weight
:
200
;
}
#
onboarding
-
overlay
-
dialog
>
nav
{
grid
-
row
:
dialog
-
start
/
footer
-
start
;
grid
-
column
-
start
:
dialog
-
start
;
margin
-
top
:
40px
;
margin
-
bottom
:
0
;
margin
-
inline
-
end
:
0
;
margin
-
inline
-
start
:
0
;
padding
:
0
;
}
#
onboarding
-
overlay
-
dialog
>
footer
{
grid
-
row
:
footer
-
start
;
grid
-
column
:
dialog
-
start
/
tour
-
end
;
font
-
size
:
13px
;
}
#
onboarding
-
tour
-
hidden
-
checkbox
{
margin
-
inline
-
start
:
27px
;
margin
-
inline
-
end
:
10px
;
}
#
onboarding
-
tour
-
list
{
margin
:
40px
0
0
0
;
padding
:
0
;
margin
-
inline
-
start
:
16px
;
}
#
onboarding
-
tour
-
list
.
onboarding
-
tour
-
item
-
container
{
list
-
style
:
none
;
outline
:
none
;
}
#
onboarding
-
tour
-
list
.
onboarding
-
tour
-
item
{
pointer
-
events
:
none
;
display
:
list
-
item
;
padding
-
inline
-
start
:
49px
;
padding
-
top
:
14px
;
padding
-
bottom
:
14px
;
margin
-
bottom
:
9px
;
background
-
repeat
:
no
-
repeat
;
background
-
position
:
left
17px
top
14px
;
background
-
size
:
20px
;
font
-
size
:
16px
;
cursor
:
pointer
;
}
#
onboarding
-
tour
-
list
.
onboarding
-
tour
-
item
:
dir
(
rtl
)
{
background
-
position
-
x
:
right
17px
;
}
#
onboarding
-
tour
-
list
.
onboarding
-
tour
-
item
.
onboarding
-
complete
:
:
before
{
content
:
url
(
"
img
/
icons_tour
-
complete
.
svg
"
)
;
position
:
relative
;
offset
-
inline
-
start
:
3px
;
top
:
-
10px
;
float
:
inline
-
start
;
}
#
onboarding
-
tour
-
list
.
onboarding
-
tour
-
item
.
onboarding
-
complete
{
padding
-
inline
-
start
:
29px
;
}
#
onboarding
-
tour
-
list
.
onboarding
-
tour
-
item
.
onboarding
-
active
#
onboarding
-
tour
-
list
.
onboarding
-
tour
-
item
-
container
:
hover
.
onboarding
-
tour
-
item
{
color
:
#
0A84FF
;
outline
:
1px
solid
transparent
;
}
#
onboarding
-
tour
-
is
-
default
-
browser
-
msg
{
font
-
size
:
16px
;
line
-
height
:
21px
;
float
:
inline
-
end
;
margin
-
inline
-
end
:
26px
;
margin
-
top
:
-
32px
;
text
-
align
:
center
;
}
#
onboarding
-
tour
-
sync
-
page
form
{
text
-
align
:
center
;
}
#
onboarding
-
tour
-
sync
-
page
form
>
h3
{
text
-
align
:
center
;
margin
:
0
;
font
-
size
:
22px
;
font
-
weight
:
normal
;
}
#
onboarding
-
tour
-
sync
-
page
form
>
p
{
text
-
align
:
center
;
margin
:
3px
0
0
0
;
font
-
size
:
15px
;
font
-
weight
:
normal
;
}
#
onboarding
-
tour
-
sync
-
page
form
>
input
{
margin
-
top
:
10px
;
height
:
40px
;
width
:
80
%
;
padding
:
7px
;
}
#
onboarding
-
tour
-
sync
-
page
form
>
#
onboarding
-
tour
-
sync
-
button
{
padding
:
10px
20px
;
min
-
width
:
40
%
;
margin
:
15px
0
;
float
:
none
;
}
.
onboarding
-
tour
-
page
{
grid
-
row
:
page
-
start
/
footer
-
end
;
grid
-
column
:
page
-
start
;
display
:
grid
;
grid
-
template
-
rows
:
[
tour
-
page
-
start
]
393px
[
tour
-
button
-
start
]
1fr
[
tour
-
page
-
end
]
;
grid
-
template
-
columns
:
[
tour
-
page
-
start
]
368px
[
tour
-
content
-
start
]
1fr
[
tour
-
page
-
end
]
;
}
/* ... */

