Bug 1393564 - making onboarding overlay button z-index consistent with other elements (notification and dialog). r=gasolin
MozReview-Commit-ID: HIU3gCziIpk

UltraBlame original commit: 7efac96862f9c8bbd2c292a3b3054762a5f740eb

--- a/browser/extensions/onboarding/content/onboarding.css
+++ b/browser/extensions/onboarding/content/onboarding.css
@@ -186,7 +186,7 @@ icon
 {
 width
 :
-32px
+36px
 ;
 vertical
 -
@@ -208,13 +208,20 @@ after
 background
 :
 #
-0060df
+5ce6e6
 ;
 font
 -
 size
 :
-13px
+12px
+;
+border
+:
+1px
+solid
+#
+fff
 ;
 text
 -
@@ -225,7 +232,7 @@ center
 color
 :
 #
-fff
+10404a
 ;
 box
 -
@@ -234,12 +241,6 @@ sizing
 content
 -
 box
-;
-font
--
-weight
-:
-400
 ;
 content
 :
@@ -256,22 +257,24 @@ inline
 -
 block
 ;
-border
+offset
+-
+inline
+-
+start
 :
-1px
-solid
-transparent
+39px
 ;
 border
 -
 radius
 :
-2px
+22px
 ;
 padding
 :
-10px
-16px
+5px
+12px
 ;
 min
 -
@@ -299,33 +302,14 @@ inline
 -
 start
 :
-4px
+3px
 ;
 margin
 -
 top
 :
 -
-10px
-;
-box
--
-shadow
-:
--
-2px
-0
 5px
-0
-rgba
-(
-74
-74
-79
-0
-.
-25
-)
 ;
 }
 #
@@ -460,7 +444,6 @@ content
 :
 url
 (
-"
 chrome
 :
 /
@@ -474,7 +457,6 @@ icons
 close
 .
 svg
-"
 )
 ;
 -
@@ -1885,23 +1867,6 @@ action
 -
 button
 {
-background
-:
-#
-0060df
-;
-border
-:
-1px
-solid
-transparent
-;
-border
--
-radius
-:
-2px
-;
 padding
 :
 10px
@@ -1911,7 +1876,7 @@ font
 -
 size
 :
-14px
+15px
 ;
 font
 -
@@ -1923,7 +1888,24 @@ line
 -
 height
 :
-16px
+21px
+;
+background
+:
+#
+0a84ff
+;
+border
+:
+1px
+solid
+transparent
+;
+border
+-
+radius
+:
+0
 ;
 color
 :
@@ -2080,7 +2062,7 @@ disabled
 background
 :
 #
-003eaa
+0060df
 ;
 cursor
 :
@@ -2108,7 +2090,7 @@ disabled
 background
 :
 #
-002275
+003EAA
 ;
 }
 .
@@ -3426,45 +3408,4 @@ color
 #
 dadada
 ;
-}
-media
-(
-min
--
-resolution
-:
-2dppx
-)
-{
-#
-onboarding
--
-notification
--
-tour
--
-icon
-{
-background
--
-image
-:
-url
-(
-"
-chrome
-:
-/
-/
-branding
-/
-content
-/
-icon128
-.
-png
-"
-)
-;
-}
 }
